--- a/po/kn.po
+++ b/po/kn.po
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: kn\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../panels/background/background.ui.h:1
 msgid "_Background"
@@ -2165,6 +2165,7 @@ msgstr "ಎಂದೂ ಬೇಡ"
 msgid "%i day ago"
 msgid_plural "%i days ago"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: network device speed
 #: ../panels/network/connection-editor/ce-page-details.c:227
@@ -3752,12 +3753,14 @@ msgstr "ಗೊತ್ತಿರದ ಸಮಯ"
 msgid "%i minute"
 msgid_plural "%i minutes"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/power/cc-power-panel.c:262
 #, c-format
 msgid "%i hour"
 msgid_plural "%i hours"
 msgstr[0] ""
+msgstr[1] ""
 
 #. TRANSLATOR: "%i %s %i %s" are "%i hours %i minutes"
 #. * Swap order with "%2$s %2$i %1$s %1$i if needed
@@ -3770,11 +3773,13 @@ msgstr "%i %s %i %s"
 msgid "hour"
 msgid_plural "hours"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/power/cc-power-panel.c:272
 msgid "minute"
 msgid_plural "minutes"
 msgstr[0] ""
+msgstr[1] ""
 
 #. TRANSLATORS: %1 is a time string, e.g. "1 hour 5 minutes"
 #: ../panels/power/cc-power-panel.c:291
@@ -4552,6 +4557,7 @@ msgstr ""
 msgid "%u Job"
 msgid_plural "%u Jobs"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: The printer is low on toner
 #: ../panels/printers/pp-printer-entry.c:739
@@ -5502,6 +5508,7 @@ msgstr "ಪ್ರೊಫೈಲ್ (_P):"
 msgid "%u Output"
 msgid_plural "%u Outputs"
 msgstr[0] ""
+msgstr[1] ""
 
 #. translators:
 #. * The number of sound inputs on a particular device
@@ -5510,6 +5517,7 @@ msgstr[0] ""
 msgid "%u Input"
 msgid_plural "%u Inputs"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/sound/gvc/gvc-mixer-control.c:2738
 msgid "System Sounds"
@@ -5654,6 +5662,7 @@ msgstr ""
 msgid "%d pixel"
 msgid_plural "%d pixels"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: Add soft hyphens to your translations so that the icon view
 #. won't clip your translations. See
