--- a/po/cs.po
+++ b/po/cs.po
@@ -18,19 +18,20 @@
 # Petr Kovar <pknbe@volny.cz>, 2007-2012
 # Petr Tomeš <ptomes@gmail.com>, 2006
 # Roddy Shuler <roddy@endlessm.com>, 2018
+# Vendula Durakova, 2018
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-24 11:43-0700\n"
-"PO-Revision-Date: 2018-04-24 18:44+0000\n"
-"Last-Translator: Roddy Shuler <roddy@endlessm.com>\n"
+"PO-Revision-Date: 2018-06-11 15:29+0000\n"
+"Last-Translator: Vendula Durakova\n"
 "Language-Team: Czech (http://www.transifex.com/endless-os/gnome-control-center/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n <= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;\n"
 
 #: ../panels/background/background.ui.h:1
 msgid "_Background"
@@ -1504,7 +1505,7 @@ msgstr "Název zařízení"
 
 #: ../panels/info/info-overview.ui.h:2
 msgid "Version"
-msgstr ""
+msgstr "Verze"
 
 #: ../panels/info/info-overview.ui.h:3
 msgid "Memory"
@@ -1539,12 +1540,12 @@ msgstr "Počítá se…"
 #. that used to be here has been moved to the App Center.
 #: ../panels/info/info-overview.ui.h:12
 msgid "<i>OS updates are now managed in the App Center</i>"
-msgstr ""
+msgstr "<i>Aktualizace OS jsou nyní spravovány v Centru aplikací</i>"
 
 #. Translators: A link to the terms of use of Endless OS.
 #: ../panels/info/info-overview.ui.h:14
 msgid "<a href='attribution-link'>Endless Terms of Use</a>"
-msgstr ""
+msgstr "Podmínky použití OS Endless"
 
 #: ../panels/info/info-removable-media.ui.h:1
 msgid "Select how media should be handled"
@@ -2180,6 +2181,7 @@ msgid_plural "%i days ago"
 msgstr[0] "před %i dnem"
 msgstr[1] "před %i dny"
 msgstr[2] "před %i dny"
+msgstr[3] "před %i dny"
 
 #. Translators: network device speed
 #: ../panels/network/connection-editor/ce-page-details.c:227
@@ -2354,11 +2356,11 @@ msgstr "Zpřístupnit _ostatním uživatelům"
 
 #: ../panels/network/connection-editor/details-page.ui.h:12
 msgid "Restrict background data usage"
-msgstr ""
+msgstr "Omezit používání dat na pozadí"
 
 #: ../panels/network/connection-editor/details-page.ui.h:13
 msgid "Appropriate for connections that have data charges or limits."
-msgstr ""
+msgstr "Vhodné pro připojení, která mají datové poplatky či omezení."
 
 #: ../panels/network/connection-editor/ethernet-page.ui.h:1
 #: ../panels/network/connection-editor/ip4-page.ui.h:11
@@ -3769,6 +3771,7 @@ msgid_plural "%i minutes"
 msgstr[0] "%i minuta"
 msgstr[1] "%i minuty"
 msgstr[2] "%i minut"
+msgstr[3] "%i minut"
 
 #: ../panels/power/cc-power-panel.c:262
 #, c-format
@@ -3777,6 +3780,7 @@ msgid_plural "%i hours"
 msgstr[0] "%i hodina"
 msgstr[1] "%i hodiny"
 msgstr[2] "%i hodin"
+msgstr[3] "%i hodin"
 
 #. TRANSLATOR: "%i %s %i %s" are "%i hours %i minutes"
 #. * Swap order with "%2$s %2$i %1$s %1$i if needed
@@ -3791,6 +3795,7 @@ msgid_plural "hours"
 msgstr[0] "hodina"
 msgstr[1] "hodiny"
 msgstr[2] "hodin"
+msgstr[3] "hodin"
 
 #: ../panels/power/cc-power-panel.c:272
 msgid "minute"
@@ -3798,6 +3803,7 @@ msgid_plural "minutes"
 msgstr[0] "minuta"
 msgstr[1] "minuty"
 msgstr[2] "minut"
+msgstr[3] "minut"
 
 #. TRANSLATORS: %1 is a time string, e.g. "1 hour 5 minutes"
 #: ../panels/power/cc-power-panel.c:291
@@ -4577,6 +4583,7 @@ msgid_plural "%u Jobs"
 msgstr[0] "%u úloha"
 msgstr[1] "%u úlohy"
 msgstr[2] "%u úloh"
+msgstr[3] "%u úloh"
 
 #. Translators: The printer is low on toner
 #: ../panels/printers/pp-printer-entry.c:739
@@ -5015,7 +5022,7 @@ msgstr "Žádné vstupní zdroje nenalezeny"
 #: ../panels/region/cc-input-chooser.c:1012
 msgctxt "Keyboard Layout"
 msgid "Other"
-msgstr ""
+msgstr "Další"
 
 #: ../panels/region/cc-region-panel.c:879
 msgid "No input source selected"
@@ -5072,7 +5079,7 @@ msgstr "jazyk;rozložení;klávesnice;vstup;"
 
 #: ../panels/region/input-chooser.ui.h:1
 msgid "Add a Keyboard Layout"
-msgstr ""
+msgstr "Přidat nové rozložení klávesnice"
 
 #: ../panels/region/input-chooser.ui.h:4
 msgid "Input methods can’t be used on the login screen"
@@ -5080,7 +5087,7 @@ msgstr "Vstupní metody nemohou být použity na přihlašovací obrazovce"
 
 #: ../panels/region/input-options.ui.h:1
 msgid "Keyboard Layout Options"
-msgstr ""
+msgstr "Možnosti rozložení klávesnice"
 
 #: ../panels/region/input-options.ui.h:2
 msgid "Use the _same source for all windows"
@@ -5124,7 +5131,7 @@ msgstr "Můj účet"
 
 #: ../panels/region/region.ui.h:2
 msgid "Login Screen"
-msgstr ""
+msgstr "Obrazovka přihlašování"
 
 #: ../panels/region/region.ui.h:3
 #: ../panels/user-accounts/data/user-accounts-dialog.ui.h:11
@@ -5153,7 +5160,7 @@ msgstr "Spojené království"
 
 #: ../panels/region/region.ui.h:9
 msgid "Keyboard Layouts"
-msgstr ""
+msgstr "Rozložení klávesnice"
 
 #: ../panels/region/region.ui.h:10
 msgid "_Options"
@@ -5354,7 +5361,7 @@ msgstr "_Vzdálené přihlášení"
 
 #: ../panels/sharing/sharing.ui.h:6
 msgid "_Content Sharing"
-msgstr ""
+msgstr "_Sdílení obsahu"
 
 #: ../panels/sharing/sharing.ui.h:7
 msgid "Some services are disabled because of no network access."
@@ -5414,13 +5421,13 @@ msgstr "Složky"
 
 #: ../panels/sharing/sharing.ui.h:22
 msgid "Content Sharing"
-msgstr ""
+msgstr "Sdílení obsahu"
 
 #: ../panels/sharing/sharing.ui.h:23
 msgid ""
 "Content sharing allows users to view content installed on this computer on "
 "Android devices on the same network."
-msgstr ""
+msgstr "Sdílení obsahu umožňuje uživatelům zobrazit obsah nainstalovaný na tomto počítači na zařízeních Android připojených ke stejné síti."
 
 #: ../panels/sound/data/gnome-sound-panel.desktop.in.in.h:1
 msgid "Sound"
@@ -5529,6 +5536,7 @@ msgid_plural "%u Outputs"
 msgstr[0] "%u výstup"
 msgstr[1] "%u výstupy"
 msgstr[2] "%u výstupů"
+msgstr[3] "%u výstupů"
 
 #. translators:
 #. * The number of sound inputs on a particular device
@@ -5539,6 +5547,7 @@ msgid_plural "%u Inputs"
 msgstr[0] "%u vstup"
 msgstr[1] "%u vstupy"
 msgstr[2] "%u vstupů"
+msgstr[3] "%u vstupů"
 
 #: ../panels/sound/gvc/gvc-mixer-control.c:2738
 msgid "System Sounds"
@@ -5685,6 +5694,7 @@ msgid_plural "%d pixels"
 msgstr[0] "%d pixel"
 msgstr[1] "%d pixely"
 msgstr[2] "%d pixelů"
+msgstr[3] "%d pixelů"
 
 #. Translators: Add soft hyphens to your translations so that the icon view
 #. won't clip your translations. See
@@ -6198,41 +6208,41 @@ msgstr ""
 
 #: ../panels/updates/cc-updates-panel.c:523
 msgid "No active connection"
-msgstr ""
+msgstr "Žádné aktivní připojení"
 
 #. "Change Network Settings" label
 #: ../panels/updates/cc-updates-panel.c:747
 msgid "Change Network Settings…"
-msgstr ""
+msgstr "Změnit nastavení sítě..."
 
 #: ../panels/updates/cc-updates-panel.ui.h:1
 #: ../panels/updates/gnome-updates-panel.desktop.in.in.h:1
 msgid "Automatic Updates"
-msgstr ""
+msgstr "Automatické aktualizace"
 
 #: ../panels/updates/cc-updates-panel.ui.h:2
 msgid ""
 "Allow background updates to happen automatically on this connection. These "
 "are usually upgraded apps, new content or updates to Endless OS."
-msgstr ""
+msgstr "Povolit automatické aktualizace na pozadí na tomto připojení. Obvykle se jedná o aktualizace aplikací, stahování nového obsahu či aktualizací OS Endless."
 
 #: ../panels/updates/cc-updates-panel.ui.h:3
 msgid "Scheduled Updates"
-msgstr ""
+msgstr "Plánované aktualizace"
 
 #: ../panels/updates/cc-updates-panel.ui.h:4
 msgid "Create a daily window for updates to happen automatically."
-msgstr ""
+msgstr "Vyberte, kdy během dne mohou automatické aktualizace probíhat."
 
 #: ../panels/updates/gnome-updates-panel.desktop.in.in.h:2
 msgid "Schedule automatic updates"
-msgstr ""
+msgstr "Naplánujte automatické aktualizace"
 
 #. Translators: those are keywords for the automatic updates control-center
 #. panel
 #: ../panels/updates/gnome-updates-panel.desktop.in.in.h:4
 msgid "Updates;Automatic;"
-msgstr ""
+msgstr "aktualizace;automatické;"
 
 #: ../panels/user-accounts/data/account-dialog.ui.h:1
 #: ../panels/user-accounts/data/join-dialog.ui.h:1
