--- a/po/fa.po
+++ b/po/fa.po
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fa\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../panels/background/background.ui.h:1
 msgid "_Background"
@@ -2170,6 +2170,7 @@ msgstr "هرگز"
 msgid "%i day ago"
 msgid_plural "%i days ago"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: network device speed
 #: ../panels/network/connection-editor/ce-page-details.c:227
@@ -3757,12 +3758,14 @@ msgstr "زمان نامعلوم"
 msgid "%i minute"
 msgid_plural "%i minutes"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/power/cc-power-panel.c:262
 #, c-format
 msgid "%i hour"
 msgid_plural "%i hours"
 msgstr[0] ""
+msgstr[1] ""
 
 #. TRANSLATOR: "%i %s %i %s" are "%i hours %i minutes"
 #. * Swap order with "%2$s %2$i %1$s %1$i if needed
@@ -3775,11 +3778,13 @@ msgstr "%Ii %s %Ii %s"
 msgid "hour"
 msgid_plural "hours"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/power/cc-power-panel.c:272
 msgid "minute"
 msgid_plural "minutes"
 msgstr[0] ""
+msgstr[1] ""
 
 #. TRANSLATORS: %1 is a time string, e.g. "1 hour 5 minutes"
 #: ../panels/power/cc-power-panel.c:291
@@ -4557,6 +4562,7 @@ msgstr "بدون کار فعّال"
 msgid "%u Job"
 msgid_plural "%u Jobs"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: The printer is low on toner
 #: ../panels/printers/pp-printer-entry.c:739
@@ -5507,6 +5513,7 @@ msgstr "_نمایه:"
 msgid "%u Output"
 msgid_plural "%u Outputs"
 msgstr[0] ""
+msgstr[1] ""
 
 #. translators:
 #. * The number of sound inputs on a particular device
@@ -5515,6 +5522,7 @@ msgstr[0] ""
 msgid "%u Input"
 msgid_plural "%u Inputs"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/sound/gvc/gvc-mixer-control.c:2738
 msgid "System Sounds"
@@ -5659,6 +5667,7 @@ msgstr "بزرگ‌ترین"
 msgid "%d pixel"
 msgid_plural "%d pixels"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: Add soft hyphens to your translations so that the icon view
 #. won't clip your translations. See
