--- a/po/id.po
+++ b/po/id.po
@@ -8,7 +8,7 @@
 # Andika Triwidada <andika@gmail.com>, 2017
 # dirgita <dirgitadevina@yahoo.co.id>, 2010,2012,2014
 # dirgita <dirgitadevina@yahoo.co.id>, 2010,2012,2014
-# Kukuh Syafaat <syafaatkukuh@gmail.com>, 2017
+# Kukuh Syafaat <syafaatkukuh@gmail.com>, 2017-2018
 # Mohammad DAMT <mdamt@bisnisweb.com>, 2003
 # princeofgiri <princeofgiri@di.blankon.in>, 2018
 # Roddy Shuler <roddy@endlessm.com>, 2017-2018
@@ -19,8 +19,8 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-24 11:43-0700\n"
-"PO-Revision-Date: 2018-05-04 06:00+0000\n"
-"Last-Translator: Roddy Shuler <roddy@endlessm.com>\n"
+"PO-Revision-Date: 2018-05-10 13:38+0000\n"
+"Last-Translator: Kukuh Syafaat <syafaatkukuh@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/endless-os/gnome-control-center/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1080,7 +1080,7 @@ msgstr "Untuk mengubah tatanan waktu atau tanggal, Anda perlu diotentikasi."
 #: ../panels/display/cc-display-panel.c:746
 msgctxt "Display rotation"
 msgid "Landscape"
-msgstr "Landsekap"
+msgstr "Lanskap"
 
 #: ../panels/display/cc-display-panel.c:749
 msgctxt "Display rotation"
@@ -1095,7 +1095,7 @@ msgstr "Potret Kiri"
 #: ../panels/display/cc-display-panel.c:755
 msgctxt "Display rotation"
 msgid "Landscape (flipped)"
-msgstr "Landsekap (dijungkir)"
+msgstr "Lanskap (dijungkir)"
 
 #. Translators: This option sets orientation of print (portrait, landscape...)
 #: ../panels/display/cc-display-panel.c:796
@@ -6172,7 +6172,7 @@ msgstr "Koneksi paket data terbatas"
 
 #: ../panels/updates/cc-updates-panel.c:474
 msgid "Unlimited data plan connection"
-msgstr "Koneksi paket data unlimited"
+msgstr "Koneksi paket data tak terbatas"
 
 #: ../panels/updates/cc-updates-panel.c:523
 msgid "No active connection"
@@ -6192,7 +6192,7 @@ msgstr "Pembaruan Otomatis"
 msgid ""
 "Allow background updates to happen automatically on this connection. These "
 "are usually upgraded apps, new content or updates to Endless OS."
-msgstr "Izinkan pembaruan latar terjadi secara otomatis pada koneksi ini. Ini umumnya berupa aplikasi yang di-upgrade, konten baru atau pembaruan untuk Endless OS."
+msgstr "Izinkan pembaruan latar terjadi secara otomatis pada koneksi ini. Ini umumnya berupa aplikasi yang ditingkatkan, konten baru atau pembaruan untuk Endless OS."
 
 #: ../panels/updates/cc-updates-panel.ui.h:3
 msgid "Scheduled Updates"
