--- a/po/ka.po
+++ b/po/ka.po
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ka\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: ../panels/background/background.ui.h:1
 msgid "_Background"
@@ -2169,6 +2169,7 @@ msgstr ""
 msgid "%i day ago"
 msgid_plural "%i days ago"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: network device speed
 #: ../panels/network/connection-editor/ce-page-details.c:227
@@ -3756,12 +3757,14 @@ msgstr ""
 msgid "%i minute"
 msgid_plural "%i minutes"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/power/cc-power-panel.c:262
 #, c-format
 msgid "%i hour"
 msgid_plural "%i hours"
 msgstr[0] ""
+msgstr[1] ""
 
 #. TRANSLATOR: "%i %s %i %s" are "%i hours %i minutes"
 #. * Swap order with "%2$s %2$i %1$s %1$i if needed
@@ -3774,11 +3777,13 @@ msgstr ""
 msgid "hour"
 msgid_plural "hours"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/power/cc-power-panel.c:272
 msgid "minute"
 msgid_plural "minutes"
 msgstr[0] ""
+msgstr[1] ""
 
 #. TRANSLATORS: %1 is a time string, e.g. "1 hour 5 minutes"
 #: ../panels/power/cc-power-panel.c:291
@@ -4556,6 +4561,7 @@ msgstr ""
 msgid "%u Job"
 msgid_plural "%u Jobs"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: The printer is low on toner
 #: ../panels/printers/pp-printer-entry.c:739
@@ -5506,6 +5512,7 @@ msgstr ""
 msgid "%u Output"
 msgid_plural "%u Outputs"
 msgstr[0] ""
+msgstr[1] ""
 
 #. translators:
 #. * The number of sound inputs on a particular device
@@ -5514,6 +5521,7 @@ msgstr[0] ""
 msgid "%u Input"
 msgid_plural "%u Inputs"
 msgstr[0] ""
+msgstr[1] ""
 
 #: ../panels/sound/gvc/gvc-mixer-control.c:2738
 msgid "System Sounds"
@@ -5658,6 +5666,7 @@ msgstr ""
 msgid "%d pixel"
 msgid_plural "%d pixels"
 msgstr[0] ""
+msgstr[1] ""
 
 #. Translators: Add soft hyphens to your translations so that the icon view
 #. won't clip your translations. See
