--- a/po/kk.po
+++ b/po/kk.po
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: kk\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: ../panels/background/background.ui.h:1
 msgid "_Background"
@@ -2164,6 +2164,7 @@ msgstr "Ешқашан"
 msgid "%i day ago"
 msgid_plural "%i days ago"
 msgstr[0] "%i күн бұрын"
+msgstr[1] "%i күн бұрын"
 
 #. Translators: network device speed
 #: ../panels/network/connection-editor/ce-page-details.c:227
@@ -3751,12 +3752,14 @@ msgstr "Уақыты белгісіз"
 msgid "%i minute"
 msgid_plural "%i minutes"
 msgstr[0] "%i минут"
+msgstr[1] "%i минут"
 
 #: ../panels/power/cc-power-panel.c:262
 #, c-format
 msgid "%i hour"
 msgid_plural "%i hours"
 msgstr[0] "%i сағат"
+msgstr[1] "%i сағат"
 
 #. TRANSLATOR: "%i %s %i %s" are "%i hours %i minutes"
 #. * Swap order with "%2$s %2$i %1$s %1$i if needed
@@ -3769,11 +3772,13 @@ msgstr "%i %s %i %s"
 msgid "hour"
 msgid_plural "hours"
 msgstr[0] "сағат"
+msgstr[1] "сағат"
 
 #: ../panels/power/cc-power-panel.c:272
 msgid "minute"
 msgid_plural "minutes"
 msgstr[0] "минут"
+msgstr[1] "минут"
 
 #. TRANSLATORS: %1 is a time string, e.g. "1 hour 5 minutes"
 #: ../panels/power/cc-power-panel.c:291
@@ -4551,6 +4556,7 @@ msgstr "Белсенді тапсырмалар жоқ"
 msgid "%u Job"
 msgid_plural "%u Jobs"
 msgstr[0] "%u тапсырма"
+msgstr[1] "%u тапсырма"
 
 #. Translators: The printer is low on toner
 #: ../panels/printers/pp-printer-entry.c:739
@@ -5501,6 +5507,7 @@ msgstr "Проф_иль:"
 msgid "%u Output"
 msgid_plural "%u Outputs"
 msgstr[0] "%u шығыс"
+msgstr[1] "%u шығыс"
 
 #. translators:
 #. * The number of sound inputs on a particular device
@@ -5509,6 +5516,7 @@ msgstr[0] "%u шығыс"
 msgid "%u Input"
 msgid_plural "%u Inputs"
 msgstr[0] "%u кіріс"
+msgstr[1] "%u кіріс"
 
 #: ../panels/sound/gvc/gvc-mixer-control.c:2738
 msgid "System Sounds"
@@ -5653,6 +5661,7 @@ msgstr "Ең үлкен"
 msgid "%d pixel"
 msgid_plural "%d pixels"
 msgstr[0] "%d пиксель"
+msgstr[1] "%d пиксель"
 
 #. Translators: Add soft hyphens to your translations so that the icon view
 #. won't clip your translations. See
