--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gnome-control-center (1:3.26.2-1endless0) unstable; urgency=medium
+
+  * Add dependency to libeos-parental-controls-0
+    https://phabricator.endlessm.com/T23897
+
+ -- Georges Basile Stavracas Neto <georges@endlessm.com>  Mon, 19 Nov 2018 12:03:23 -0200
+
 gnome-control-center (1:3.26.2-1) unstable; urgency=medium
 
   * New upstream release
