--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+gnome-control-center (1:3.32.1-1endless0) unstable; urgency=medium
+
+  * Rebase over upstream gnome-control-center-3.32.1
+    https://phabricator.endlessm.com/T25338
+  * Endless specific changes:
+    - Remove .pkla file (from 747aa91)
+    - Specify location for our vendor overrides (from 987506c)
+    - Use dh_eoscontent to merge Endless desktop customizations (from af0c40d)
+    - Add git to build-dep (from 0626e5b)
+    - Add build dependency on eos-metrics-0-dev (from 8052c43)
+    - Add build dependency on libeos-parental-controls-0 (from 0e05dcd)
+    - Add build dependency on libmogwai-tariff-0 (from 0a833378)
+    - Add udisks2 >= 2.1.8 dependency (from 6093e02)
+    - debian: Add dependency on libflatpak (from 8e9ac9e)
+
+ -- Umang Jain <umang@endlessm.com>  Wed, 15 May 2019 22:03:23 +0530
+
 gnome-control-center (1:3.32.1-1) experimental; urgency=medium
 
   * New upstream release
