Drop eos-parental-controls dependency in favour of malcontent
https://phabricator.endlessm.com/T26995

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gnome-control-center (1:3.32.1-1endless1) unstable; urgency=medium
+
+  * Drop eos-parental-controls dependency in favour of malcontent
+    https://phabricator.endlessm.com/T26995
+
+ -- Umang Jain <umang@endlessm.com>  Wed, 11 Jun 2019 11:07:13 +0530
+
 gnome-control-center (1:3.32.1-1endless0) unstable; urgency=medium
 
   * Rebase over upstream gnome-control-center-3.32.1
