Updates from Transifex

--- a/po/eo.po
+++ b/po/eo.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
+"PO-Revision-Date: 2019-06-04 17:06+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Esperanto (http://www.transifex.com/endless-os/gnome-control-center/language/eo/)\n"
 "MIME-Version: 1.0\n"
@@ -1147,7 +1147,7 @@ msgstr ""
 
 #: ../panels/display/cc-display-panel.c:2050
 msgid "Join Displays"
-msgstr ""
+msgstr "Kunigi ekranojn"
 
 #: ../panels/display/cc-display-panel.c:2053
 msgid "Mirror"
@@ -4013,7 +4013,7 @@ msgstr ""
 
 #: ../panels/power/cc-power-panel.c:2223
 msgid "Automatic suspend"
-msgstr ""
+msgstr "Aŭtomata haltetado"
 
 #: ../panels/power/cc-power-panel.c:2290
 msgid "_When the Power Button is pressed"
@@ -7554,7 +7554,7 @@ msgstr ""
 #: ../panels/wacom/cc-wacom-button-row.h:53
 msgctxt "Wacom action-type"
 msgid "Application defined"
-msgstr ""
+msgstr "Aplikaĵo difinita"
 
 #: ../panels/wacom/cc-wacom-button-row.h:54
 msgctxt "Wacom action-type"
