--- a/po/et.po
+++ b/po/et.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
+"PO-Revision-Date: 2019-06-05 14:23+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Estonian (http://www.transifex.com/endless-os/gnome-control-center/language/et/)\n"
 "MIME-Version: 1.0\n"
@@ -178,7 +178,7 @@ msgstr "Taustapilt;Tapeet;Ekraan;Töölaud;"
 
 #: ../panels/bluetooth/cc-bluetooth-panel.c:265
 msgid "Turn Off Airplane Mode"
-msgstr ""
+msgstr "Lülita lennurežiim välja"
 
 #: ../panels/bluetooth/cc-bluetooth-panel.c:331
 msgid "No Bluetooth Found"
@@ -1141,7 +1141,7 @@ msgstr ""
 
 #: ../panels/display/cc-display-panel.c:2050
 msgid "Join Displays"
-msgstr ""
+msgstr "Ühenda kuvarid"
 
 #: ../panels/display/cc-display-panel.c:2053
 msgid "Mirror"
@@ -2432,7 +2432,7 @@ msgstr "Ainult kohalik võrk (link-local)"
 #: ../panels/network/connection-editor/ip4-page.ui.h:5
 #: ../panels/network/connection-editor/ip6-page.ui.h:6
 msgid "Disable"
-msgstr ""
+msgstr "Keela"
 
 #: ../panels/network/connection-editor/ip4-page.ui.h:6
 #: ../panels/network/connection-editor/ip6-page.ui.h:7
@@ -4007,7 +4007,7 @@ msgstr "_Automaatne uinumine"
 
 #: ../panels/power/cc-power-panel.c:2223
 msgid "Automatic suspend"
-msgstr ""
+msgstr "Automaatne uinumine"
 
 #: ../panels/power/cc-power-panel.c:2290
 msgid "_When the Power Button is pressed"
@@ -5831,7 +5831,7 @@ msgstr ""
 
 #: ../panels/universal-access/uap.ui.h:38
 msgid "Speed"
-msgstr ""
+msgstr "Kiirus"
 
 #: ../panels/universal-access/uap.ui.h:39
 msgid "Repeat keys speed"
@@ -7548,7 +7548,7 @@ msgstr ""
 #: ../panels/wacom/cc-wacom-button-row.h:53
 msgctxt "Wacom action-type"
 msgid "Application defined"
-msgstr ""
+msgstr "Rakenduse määratud"
 
 #: ../panels/wacom/cc-wacom-button-row.h:54
 msgctxt "Wacom action-type"
