--- a/po/gd.po
+++ b/po/gd.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
+"PO-Revision-Date: 2019-06-04 17:09+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Gaelic, Scottish (http://www.transifex.com/endless-os/gnome-control-center/language/gd/)\n"
 "MIME-Version: 1.0\n"
@@ -1140,7 +1140,7 @@ msgstr ""
 
 #: ../panels/display/cc-display-panel.c:2050
 msgid "Join Displays"
-msgstr ""
+msgstr "Cuir iad còmhla"
 
 #: ../panels/display/cc-display-panel.c:2053
 msgid "Mirror"
@@ -7565,7 +7565,7 @@ msgstr ""
 #: ../panels/wacom/cc-wacom-button-row.h:53
 msgctxt "Wacom action-type"
 msgid "Application defined"
-msgstr ""
+msgstr "A-rèir na h-aplacaid"
 
 #: ../panels/wacom/cc-wacom-button-row.h:54
 msgctxt "Wacom action-type"
