--- a/po/he.po
+++ b/po/he.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
+"PO-Revision-Date: 2019-06-04 17:08+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Hebrew (http://www.transifex.com/endless-os/gnome-control-center/language/he/)\n"
 "MIME-Version: 1.0\n"
@@ -1141,7 +1141,7 @@ msgstr ""
 
 #: ../panels/display/cc-display-panel.c:2050
 msgid "Join Displays"
-msgstr ""
+msgstr "צירוף תצוגות"
 
 #: ../panels/display/cc-display-panel.c:2053
 msgid "Mirror"
@@ -7566,7 +7566,7 @@ msgstr ""
 #: ../panels/wacom/cc-wacom-button-row.h:53
 msgctxt "Wacom action-type"
 msgid "Application defined"
-msgstr ""
+msgstr "הגדרת יישום"
 
 #: ../panels/wacom/cc-wacom-button-row.h:54
 msgctxt "Wacom action-type"
