--- a/po/tg.po
+++ b/po/tg.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
+"PO-Revision-Date: 2019-06-04 17:07+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Tajik (http://www.transifex.com/endless-os/gnome-control-center/language/tg/)\n"
 "MIME-Version: 1.0\n"
@@ -7545,7 +7545,7 @@ msgstr ""
 #: ../panels/wacom/cc-wacom-button-row.h:53
 msgctxt "Wacom action-type"
 msgid "Application defined"
-msgstr ""
+msgstr "Барномаи муайяншуда"
 
 #: ../panels/wacom/cc-wacom-button-row.h:54
 msgctxt "Wacom action-type"
