--- a/po/nl.po
+++ b/po/nl.po
@@ -21,8 +21,8 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
-"Last-Translator: Will Thompson <wjt@endlessm.com>\n"
+"PO-Revision-Date: 2019-06-01 10:15+0000\n"
+"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/endless-os/gnome-control-center/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7177,7 +7177,7 @@ msgstr "Beheerder"
 #: ../panels/user-accounts/um-app-permissions.c:389
 #: ../panels/user-accounts/um-app-permissions.c:772
 msgid "No Restriction"
-msgstr ""
+msgstr "Geen beperking"
 
 #: ../panels/user-accounts/um-fingerprint-dialog.c:142
 msgid ""
