--- a/po/oc.po
+++ b/po/oc.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
+"PO-Revision-Date: 2019-06-04 17:09+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Occitan (post 1500) (http://www.transifex.com/endless-os/gnome-control-center/language/oc/)\n"
 "MIME-Version: 1.0\n"
@@ -1139,7 +1139,7 @@ msgstr ""
 
 #: ../panels/display/cc-display-panel.c:2050
 msgid "Join Displays"
-msgstr ""
+msgstr "Jónher ecrans"
 
 #: ../panels/display/cc-display-panel.c:2053
 msgid "Mirror"
@@ -7546,7 +7546,7 @@ msgstr ""
 #: ../panels/wacom/cc-wacom-button-row.h:53
 msgctxt "Wacom action-type"
 msgid "Application defined"
-msgstr ""
+msgstr "Aplicacions definidas"
 
 #: ../panels/wacom/cc-wacom-button-row.h:54
 msgctxt "Wacom action-type"
