--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -41,8 +41,8 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
-"Last-Translator: Will Thompson <wjt@endlessm.com>\n"
+"PO-Revision-Date: 2019-05-31 22:47+0000\n"
+"Last-Translator: Leandro Stanger <leandrostanger@hotmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/endless-os/gnome-control-center/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7197,7 +7197,7 @@ msgstr "Administrador"
 #: ../panels/user-accounts/um-app-permissions.c:389
 #: ../panels/user-accounts/um-app-permissions.c:772
 msgid "No Restriction"
-msgstr ""
+msgstr "Sem restrição"
 
 #: ../panels/user-accounts/um-fingerprint-dialog.c:142
 msgid ""
