--- a/po/bg.po
+++ b/po/bg.po
@@ -7,6 +7,7 @@
 # Borislav Aleksandrov <B.Aleksandrov@cnsys.bg>, 2002
 # Ivaylo Valkov <ivaylo@e-valkov.org>, 2011-2013
 # Jordan Miladinov <jordanmiladinov@gmail.com>, 2011
+# Jordan Nenov <alabalistic@gmail.com>, 2019
 # bfaf <mk2616@abv.bg>, 2009
 # Roddy Shuler <roddy@stanfordalumni.org>, 2018
 # Rostislav Raykov <zbrox@i-space.org>, 2004-2005
@@ -18,8 +19,8 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 21:11+0100\n"
-"PO-Revision-Date: 2019-05-31 20:14+0000\n"
-"Last-Translator: Will Thompson <wjt@endlessm.com>\n"
+"PO-Revision-Date: 2019-06-19 21:45+0000\n"
+"Last-Translator: Jordan Nenov <alabalistic@gmail.com>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/endless-os/gnome-control-center/language/bg/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1535,12 +1536,12 @@ msgstr "Изчисляване…"
 #. that used to be here has been moved to the App Center.
 #: ../panels/info/info-overview.ui.h:12
 msgid "<i>OS updates are now managed in the App Center</i>"
-msgstr ""
+msgstr "<i>Програмните обновления се контролират от Магазина с приложения</i>"
 
 #. Translators: A link to the terms of use of Endless OS.
 #: ../panels/info/info-overview.ui.h:14
 msgid "<a href='attribution-link'>Endless Terms of Use</a>"
-msgstr ""
+msgstr "<a href='attribution-link'>Ендлес Условия за ползване</a>"
 
 #: ../panels/info/info-removable-media.ui.h:1
 msgid "Select how media should be handled"
