Updates from Transifex
https://phabricator.endlessm.com/T27087
(cherry picked from commit a9d9d38ac6629bae4ed57a44f9492c15c28be003)

--- a/po/ar.po
+++ b/po/ar.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-23 06:06+0000\n"
-"PO-Revision-Date: 2019-08-23 06:18+0000\n"
+"PO-Revision-Date: 2019-09-04 09:12+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/endless-os/gnome-control-center/language/ar/)\n"
 "MIME-Version: 1.0\n"
@@ -6345,7 +6345,7 @@ msgstr ""
 #. file name)!
 #: panels/thunderbolt/gnome-thunderbolt-panel.desktop.in.in:7
 msgid "thunderbolt"
-msgstr ""
+msgstr "thunderbolt"
 
 #. Translators: those are keywords for the thunderbolt control-center panel.
 #. Do NOT translate or localize the semicolons! The list MUST also end with a
@@ -6942,7 +6942,7 @@ msgstr "جدولة التحديث التلقائي"
 
 #: panels/updates/gnome-updates-panel.desktop.in.in:6
 msgid "software-update-available"
-msgstr ""
+msgstr "software-update-available"
 
 #. Translators: those are keywords for the automatic updates control-center
 #. panel
