--- a/po/id.po
+++ b/po/id.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-23 06:06+0000\n"
-"PO-Revision-Date: 2019-08-23 06:18+0000\n"
+"PO-Revision-Date: 2019-09-04 09:09+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/endless-os/gnome-control-center/language/id/)\n"
 "MIME-Version: 1.0\n"
@@ -296,7 +296,7 @@ msgstr "Penyimpanan"
 
 #: panels/applications/cc-applications-panel.ui:413
 msgid "Open in App Center"
-msgstr ""
+msgstr "Buka di Pusat Aplikasi"
 
 #: panels/applications/cc-applications-panel.ui:475
 msgid ""
@@ -4259,19 +4259,19 @@ msgstr "Batera"
 #, c-format
 msgid "%d hour"
 msgid_plural "%d hours"
-msgstr[0] ""
+msgstr[0] "%d jam"
 
 #: panels/power/cc-power-panel.c:1199
 #, c-format
 msgid "%d minute"
 msgid_plural "%d minutes"
-msgstr[0] ""
+msgstr[0] "%d menit"
 
 #: panels/power/cc-power-panel.c:1202
 #, c-format
 msgid "%d second"
 msgid_plural "%d seconds"
-msgstr[0] ""
+msgstr[0] "%d detik"
 
 #. 5 hours 2 minutes 12 seconds
 #: panels/power/cc-power-panel.c:1207
@@ -4833,7 +4833,7 @@ msgstr "Selesai"
 #, c-format
 msgid "%u Job Requires Authentication"
 msgid_plural "%u Jobs Require Authentication"
-msgstr[0] ""
+msgstr[0] "%u Tugas Memerlukan Autentikasi"
 
 #. Translators: This is the printer name for which we are showing the active
 #. jobs
@@ -6199,7 +6199,7 @@ msgstr "Gagal melupakan perangkat: "
 #, c-format
 msgid "Depends on %u other device"
 msgid_plural "Depends on %u other devices"
-msgstr[0] ""
+msgstr[0] "Tergantung pada%u perangkat lain"
 
 #: panels/thunderbolt/cc-bolt-device-dialog.ui:109
 msgid "Name:"
@@ -6883,7 +6883,7 @@ msgstr "Jadwalkan pembaruan otomatis"
 
 #: panels/updates/gnome-updates-panel.desktop.in.in:6
 msgid "software-update-available"
-msgstr ""
+msgstr "software-update-available"
 
 #. Translators: those are keywords for the automatic updates control-center
 #. panel
