--- a/po/nl.po
+++ b/po/nl.po
@@ -22,8 +22,8 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-23 06:06+0000\n"
-"PO-Revision-Date: 2019-08-23 06:18+0000\n"
-"Last-Translator: Vicki Niu <vicki@endlessm.com>\n"
+"PO-Revision-Date: 2019-08-23 10:08+0000\n"
+"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/endless-os/gnome-control-center/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7040,18 +7040,18 @@ msgstr "Voorkom dat deze gebruiker bepaalde apps opent door ze hieronder uit te 
 
 #: panels/user-accounts/cc-app-permissions.ui:78
 msgid "Restrict Web Browsers"
-msgstr ""
+msgstr "Webbrowsers inperken"
 
 #: panels/user-accounts/cc-app-permissions.ui:93
 msgid ""
 "Prevent this user from running web browsers by turning them off below. Note "
 "that if the computer is connected to the internet, limited web content may "
 "still be available in other applications."
-msgstr ""
+msgstr "Voorkom dat de gebruiker bepaalde webbrowsers gebruikt door ze hieronder uit te schakelen. Let op: als de computer verbonden is met internet, dan kan bepaalde webinhoud nog steeds beschikbaar zijn in andere toepassingen."
 
 #: panels/user-accounts/cc-app-permissions.ui:120
 msgid "Web _Browsers"
-msgstr ""
+msgstr "Web_browsers"
 
 #: panels/user-accounts/cc-app-permissions.ui:153
 msgid "App Center Restrictions"
@@ -7059,15 +7059,15 @@ msgstr "Appcentrum-beperkingen"
 
 #: panels/user-accounts/cc-app-permissions.ui:173
 msgid "App _Installation"
-msgstr ""
+msgstr "App-_installatie:"
 
 #: panels/user-accounts/cc-app-permissions.ui:209
 msgid "Install Apps for All _Users"
-msgstr ""
+msgstr "Installeer apps voor alle gebr_uikers:"
 
 #: panels/user-accounts/cc-app-permissions.ui:245
 msgid "Show Apps _Suitable For"
-msgstr ""
+msgstr "Toon apps die ge_schikt zijn voor:"
 
 #: panels/user-accounts/cc-avatar-chooser.c:234
 msgid "Browse for more pictures"
